<resources>
    <string name="app_name">Book and Audio</string>
    <string name="placeholder">This is: %1$s</string>
    <string name="external_storage_reading_permission_not_granted">Reading External Storage Permission not granted. Aborting.</string>
    <string name="selected_folder_is_null_or_empty">Selected Folder is empty. Please select correct Folder.</string>
    <string name="selected_folder_does_not_contain_images">Folder does not contain any images. Please select correct Folder.</string>
    <string name="viewpager_list_item_image_view_content_description">Main Image</string>
    <string name="book_page">Book Page</string>
    <string name="play_pause_track">Play/Pause Track</string>
    <string name="next_track">Next Track</string>
    <string name="volume_down_icon">Volume Down Icon</string>
    <string name="volume_up_icon">Volume Up Icon</string>
    <string name="previous_track">Previous Track</string>
    <string name="does_not_have_audio">This book doesn\'t have an audio track</string>
    <string name="menu_switch_pages">Switch Pages</string>
    <string name="menu_change_grid">Change Grid</string>
    <string name="menu_full_screen">Full Screen</string>
    <string name="menu_set_library_folder">Set Library Folder</string>
    <string name="menu_subdirectory_settings">Subdirectory Settings</string>
    <string name="honeysoft_logo">HoneySoft Logo</string>
    <string name="honeysoft_logo_text">HoneySoft\nby Hoon Jung</string>
    <string name="book_and_audio_icon">Book and Audio Icon</string>
    <string name="book_and_audio_icon_text">Icons made by Smashicons\nfrom www.flaticon.com</string>
    <string name="about">About…</string>
    <string name="time_left">-%1$s</string>
</resources>
