<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/main_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/media_player_controls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:baselineAligned="false"
        android:id="@+id/media_player_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_image">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/time_played"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:text="00:15" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/media_position"
                android:layout_width="150dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/time_left"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                tools:text="-00:30" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/media_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center|top"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/previous_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#00000000"
                android:contentDescription="@string/previous_track"
                tools:src="@android:drawable/ic_media_previous" />

            <ImageButton
                android:id="@+id/play_pause_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#00000000"
                android:contentDescription="@string/play_pause_track"
                tools:src="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/next_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#00000000"
                android:contentDescription="@string/next_track"
                tools:src="@android:drawable/ic_media_next" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/volume_down_icon"
                android:src="@drawable/ic_volume_down_black_24dp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/media_volume"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:max="100"
                android:progress="50" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/volume_up_icon"
                android:src="@drawable/ic_volume_up_black_24dp" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>